Finished database persistence and policy support